--- a/tasks/debian_solr.yml
+++ b/tasks/debian_solr.yml
@@ -1,20 +1,20 @@
 ---
 - name: download Solr
-  command: wget http://www.mirrorservice.org/sites/ftp.apache.org/lucene/solr/4.10.4/solr-4.10.4.tgz chdir=/home/{{ user }} creates=/home/{{ user }}/solr-4.10.4.tgz
+  command: wget {{ solr_mirror }}/{{ solr_version }}/solr-{{ solr_version }}.tgz chdir=/home/{{ user }} creates=/home/{{ user }}/solr-{{ solr_version }}.tgz
 
 - name: extract Solr
-  command: tar -zxf /home/{{ user }}/solr-4.10.4.tgz chdir=/home/{{ user }} creates=/home/{{ user }}/solr-4.10.4
+  command: tar -zxf /home/{{ user }}/solr-{{ solr_version }}.tgz chdir=/home/{{ user }} creates=/home/{{ user }}/solr-{{ solr_version }}
 
 - name: copy Solr war file
-  command: cp /home/{{ user }}/solr-4.10.4/dist/solr-4.10.4.war /var/lib/tomcat6/webapps/solr.war creates=/var/lib/tomcat6/webapps/solr.war
+  command: cp /home/{{ user }}/solr-{{ solr_version }}/dist/solr-{{ solr_version }}.war /var/lib/tomcat6/webapps/solr.war creates=/var/lib/tomcat6/webapps/solr.war
   sudo: true
 
 - name: list solr files (in order to copy)
-  command: ls -1 /home/{{ user }}/solr-4.10.4/example/solr/
+  command: ls -1 /home/{{ user }}/solr-{{ solr_version }}/example/solr/
   register: solrfiles
 
 - name: copy Solr instance
-  command: cp -ar /home/{{ user }}/solr-4.10.4/example/solr/{{ item }} /home/solr creates=/home/solr/{{ item }}
+  command: cp -ar /home/{{ user }}/solr-{{ solr_version }}/example/solr/{{ item }} /home/solr creates=/home/solr/{{ item }}
   sudo: true
   with_items: solrfiles.stdout_lines
 
@@ -35,12 +35,12 @@
   sudo: true
 
 - name: list all jar files that are part of solr (in order to copy)
-  shell: ls -1 /home/{{ user }}/solr-4.10.4/dist/ | grep .jar
+  shell: ls -1 /home/{{ user }}/solr-{{ solr_version }}/dist/ | grep .jar
   register: solrjarfiles
   changed_when: false
 
 - name: copy solr lib files
-  command: cp /home/{{ user }}/solr-4.10.4/dist/{{ item }} /home/solr/lib/{{ item }} creates=/home/solr/lib/{{ item }}
+  command: cp /home/{{ user }}/solr-{{ solr_version }}/dist/{{ item }} /home/solr/lib/{{ item }} creates=/home/solr/lib/{{ item }}
   with_items: solrjarfiles.stdout_lines
   sudo: true
 
@@ -95,7 +95,7 @@
   sudo: true
 
 - name: copy the needed class directories over
-  command: cp -r /home/{{ user }}/solr-4.10.4/contrib/{{ item }} /home/solr/lib/contrib/{{ item }} creates=/home/solr/lib/contrib/{{ item }}
+  command: cp -r /home/{{ user }}/solr-{{ solr_version }}/contrib/{{ item }} /home/solr/lib/contrib/{{ item }} creates=/home/solr/lib/contrib/{{ item }}
   sudo: true
   with_items:
     - analysis-extras
