update dependency to non galaxy role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 
 dependencies:
-  - { role: hashbangcode.tomcat }
+  - { role:  ansible-role-tomcat }
 
 galaxy_info:
   author: philipnorton42
