--- a/tasks/redhat_solr.yml
+++ b/tasks/redhat_solr.yml
@@ -67,6 +67,7 @@
     version: 7.x-1.6
     depth: 1
   when: drupal_solr_package == "search_api_solr"
+  sudo: true
 
 - name: get Drupal solr integration via apachesolr
   git:
@@ -75,6 +76,7 @@
     version: 7.x-1.7
     depth: 1
   when: drupal_solr_package == "apachesolr"
+  sudo: true
 
 - name: copy Drupal Solr config into Solr
   shell: cp -r /home/{{ solr_user }}/drupal_solr/solr-conf/4.x/. /home/solr/{{ default_collection_name }}/conf/
