--- a/tasks/debian_solr.yml
+++ b/tasks/debian_solr.yml
@@ -6,7 +6,11 @@
   command: tar -zxf /home/{{ solr_user }}/solr-{{ solr_version }}.tgz chdir=/home/{{ solr_user }} creates=/home/{{ solr_user }}/solr-{{ solr_version }}
 
 - name: copy Solr war file
-  command: cp /home/{{ solr_user }}/solr-{{ solr_version }}/dist/solr-{{ solr_version }}.war /var/lib/tomcat6/webapps/solr.war creates=/var/lib/tomcat6/webapps/solr.war
+  command: cp /home/{{ solr_user }}/solr-{{ solr_version }}/dist/solr-{{ solr_version }}.war /var/lib/tomcat6/webapps/solr.war owner=tomcat6 group=tomcat6 creates=/var/lib/tomcat6/webapps/solr.war
+  sudo: true
+
+- name: ensure Solr war file has correct owner
+  file: path=/var/lib/tomcat6/webapps/solr.war owner=tomcat6 group=tomcat
   sudo: true
 
 - name: list solr files (in order to copy)
