--- a/tasks/debian_solr.yml
+++ b/tasks/debian_solr.yml
@@ -52,9 +52,13 @@
   service: name=tomcat6 state=restarted
   sudo: true
 
-- name: add WEB-INF directory
-  command: mkdir -p /var/lib/tomcat6/webapps/solr/WEB-INF/
+- name: Wait for Tomcat to restart and expand the app
+  wait_for: path=/var/lib/tomcat6/webapps/solr/WEB-INF
   sudo: true
+
+# - name: add WEB-INF directory
+#   command: mkdir -p /var/lib/tomcat6/webapps/solr/WEB-INF/
+#   sudo: true
 
 - name: copy the web.xml tomcat solr integration file
   copy: src=debian_web.xml dest=/var/lib/tomcat6/webapps/solr/WEB-INF/web.xml
