--- a/tasks/redhat_solr.yml
+++ b/tasks/redhat_solr.yml
@@ -6,7 +6,11 @@
   command: tar -zxf /home/{{ solr_user }}/solr-{{ solr_version }}.tgz chdir=/home/{{ solr_user }} creates=/home/{{ solr_user }}/solr-{{ solr_version }}
 
 - name: copy Solr war file
-  command: cp /home/{{ solr_user }}/solr-{{ solr_version }}/dist/solr-{{ solr_version }}.war /var/lib/tomcat6/webapps/solr.war owner=tomcat group=tomcat creates=/var/lib/tomcat6/webapps/solr.war
+  command: cp /home/{{ solr_user }}/solr-{{ solr_version }}/dist/solr-{{ solr_version }}.war /var/lib/tomcat6/webapps/solr.war creates=/var/lib/tomcat6/webapps/solr.war
+  sudo: true
+
+- name: ensure Solr war file has correct owner
+  file: path=/var/lib/tomcat6/webapps/solr.war owner=tomcat group=tomcat
   sudo: true
 
 - name: list solr files (in order to copy)
@@ -48,9 +52,14 @@
   service: name=tomcat6 state=restarted
   sudo: true
 
-- name: add WEB-INF directory
-  command: mkdir -p /var/lib/tomcat6/webapps/solr/WEB-INF/
+# restart of tomcat will expand the war file
+- name: Wait for Tomcat to restart and expand the app
+  wait_for: path=/var/lib/tomcat6/webapps/solr/WEB-INF
   sudo: true
+
+# - name: add WEB-INF directory
+#   command: mkdir -p /var/lib/tomcat6/webapps/solr/WEB-INF/
+#   sudo: true
 
 - name: copy the web.xml tomcat solr integration file
   copy: src=redhat_web.xml dest=/var/lib/tomcat6/webapps/solr/WEB-INF/web.xml
