--- a/tasks/redhat_solr.yml
+++ b/tasks/redhat_solr.yml
@@ -7,11 +7,11 @@
 
 - name: copy Solr war file
   command: cp /home/{{ solr_user }}/solr-{{ solr_version }}/dist/solr-{{ solr_version }}.war /var/lib/tomcat6/webapps/solr.war creates=/var/lib/tomcat6/webapps/solr.war
-  sudo: true
+  become: true
 
 - name: ensure Solr war file has correct owner
   file: path=/var/lib/tomcat6/webapps/solr.war owner=tomcat group=tomcat
-  sudo: true
+  become: true
 
 - name: list solr files (in order to copy)
   command: ls -1 /home/{{ solr_user }}/solr-{{ solr_version }}/example/solr/
@@ -19,24 +19,24 @@
 
 - name: copy Solr instance
   command: cp -ar /home/{{ solr_user }}/solr-{{ solr_version }}/example/solr/{{ item }} /home/solr creates=/home/solr/{{ item }}
-  sudo: true
+  become: true
   with_items: solrfiles.stdout_lines
 
 - name: rename the collection1 directory to {{ default_collection_name }}
   command: mv /home/solr/collection1 /home/solr/{{ default_collection_name }} creates=/home/solr/{{ default_collection_name }}
-  sudo: true
+  become: true
 
 - name: remove the collection1 collection if it is still there
   file: path=/home/solr/collection1 state=absent
-  sudo: true
+  become: true
 
 - name: change the name of the collection
   lineinfile: dest=/home/solr/{{ default_collection_name }}/core.properties regexp="^name=" insertafter="^name=" line="name={{ default_collection_name }}"
-  sudo: true
+  become: true
 
 - name: create a solr lib directory
   file: path=/home/solr/lib state=directory
-  sudo: true
+  become: true
 
 - name: list all jar files that are part of solr (in order to copy)
   shell: ls -1 /home/{{ solr_user }}/solr-{{ solr_version }}/dist/ | grep .jar
@@ -46,28 +46,28 @@
 - name: copy solr lib files
   command: cp /home/{{ solr_user }}/solr-{{ solr_version }}/dist/{{ item }} /home/solr/lib/{{ item }} creates=/home/solr/lib/{{ item }}
   with_items: solrjarfiles.stdout_lines
-  sudo: true
+  become: true
 
 - name: force restart of tomcat6
   service: name=tomcat6 state=restarted
-  sudo: true
+  become: true
 
 # restart of tomcat will expand the war file
 - name: Wait for Tomcat to restart and expand the app
   wait_for: path=/var/lib/tomcat6/webapps/solr/WEB-INF
-  sudo: true
+  become: true
 
 # - name: add WEB-INF directory
 #   command: mkdir -p /var/lib/tomcat6/webapps/solr/WEB-INF/
-#   sudo: true
+#   become: true
 
 - name: copy the web.xml tomcat solr integration file
   copy: src=redhat_web.xml dest=/var/lib/tomcat6/webapps/solr/WEB-INF/web.xml
-  sudo: true
+  become: true
 
 - name: make the {{ default_collection_name }} data directory
   command: mkdir /home/solr/{{ default_collection_name }}/data creates=/home/solr/{{ default_collection_name }}/data
-  sudo: true
+  become: true
 
 - name: get Drupal solr integration via search_api_solr
   git:
@@ -76,7 +76,7 @@
     version: 7.x-1.6
     depth: 1
   when: drupal_solr_package == "search_api_solr"
-  sudo: true
+  become: true
 
 - name: get Drupal solr integration via apachesolr
   git:
@@ -85,29 +85,29 @@
     version: 7.x-1.7
     depth: 1
   when: drupal_solr_package == "apachesolr"
-  sudo: true
+  become: true
 
 - name: copy Drupal Solr config into Solr
   shell: cp -r /home/{{ solr_user }}/drupal_solr/solr-conf/4.x/. /home/solr/{{ default_collection_name }}/conf/
   when: drupal_solr_package == "search_api_solr"
-  sudo: true
+  become: true
   notify:
    - restart tomcat6
 
 - name: copy Drupal Solr config into Solr
   shell: cp -r /home/{{ solr_user }}/drupal_solr/solr-conf/solr-4.x/. /home/solr/{{ default_collection_name }}/conf/
   when: drupal_solr_package == "apachesolr"
-  sudo: true
+  become: true
   notify:
    - restart tomcat6
 
 - name: make the lib/contrib directory for the extension to live in
   command: mkdir -p /home/solr/lib/contrib creates=/home/solr/lib/contrib
-  sudo: true
+  become: true
 
 - name: copy the needed class directories over
   command: cp -r /home/{{ solr_user }}/solr-{{ solr_version }}/contrib/{{ item }} /home/solr/lib/contrib/{{ item }} creates=/home/solr/lib/contrib/{{ item }}
-  sudo: true
+  become: true
   with_items:
     - analysis-extras
     - clustering
@@ -119,4 +119,4 @@
 
 - name: ensure tomcat/Solr directory has correct owner
   file: path=/home/solr owner=tomcat group=tomcat recurse=yes
-  sudo: true
+  become: true
